Policy-Networking-Calico/NetworkPolicy/allow/allow-busybox-egress.yaml
# Cho phép pod busbox có nhãn run=access trong namespace advanced-policy-demo được phép đi ra ngoài
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-busybox-egress
  namespace: networking-policy-demo
spec:
  selector: app == 'attacker'
  types:
  - Egress
  egress:
  - action: Allow
    destination: {}
