Policy-Networking-Calico/NetworkPolicy/allow/allow-db-from-trusted-ingress.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-trusted-to-db
  namespace: production
spec:
  selector: app == 'db'
  types: 
  - Ingress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: role == 'trusted'
    destination:
      ports:
      - 5432
  - action: Deny
    protocol: TCP
    source:
      selector: app == 'attacker'
    destination:
      ports:
      - 5432
